--- a/paper2/report.tex
+++ b/paper2/report.tex
@@ -3,52 +3,30 @@
 \input{format/i523}
 
 \begin{document}
-\title{Big Data for Edge Computing}
+\title{How Big Data Transform Education}
 
 
-\author{Ben Trovato}
+\author{Geng Niu}
 \orcid{1234-5678-9012}
 \affiliation{%
-  \institution{Institute for Clarity in Documentation}
-  \streetaddress{P.O. Box 1212}
-  \city{Dublin} 
-  \state{Ohio} 
-  \postcode{43017-6221}
-}
-\email{trovato@corporation.com}
-
-\author{G.K.M. Tobin}
-\affiliation{%
-  \institution{Institute for Clarity in Documentation}
-  \streetaddress{P.O. Box 1212}
-  \city{Dublin} 
-  \state{Ohio} 
-  \postcode{43017-6221}
-}
-\email{webmaster@marysville-ohio.com}
-
-\author{Gregor von Laszewski}
-\affiliation{%
-  \institution{Indiana University}
-  \streetaddress{Smith Research Center}
+  \institution{School of Education Indiana University}
+  \streetaddress{752 Woodbridge Drive}
   \city{Bloomington} 
-  \state{IN} 
+  \state{Indiana} 
   \postcode{47408}
-  \country{USA}}
-\email{laszewski@gmail.com}
+}
+
 
 
 % The default list of authors is too long for headers}
-\renewcommand{\shortauthors}{G. v. Laszewski}
+\renewcommand{\shortauthors}{Niu.G}
 
 
 \begin{abstract}
-This paper provides a sample of a \LaTeX\ document which conforms,
-somewhat loosely, to the formatting guidelines for
-ACM SIG Proceedings.
+Educators have been searching for new approaches of teaching. In the past century, education has been tremendous progress in terms of teaching methods. However, a close look at these development reveals that development made in science and technologies drove these advances made in education. Therefore, it is very important for educators to explore the potential of big data in advancing education in this new century.
 \end{abstract}
 
-\keywords{Big Data, Edge Computing i523}
+\keywords{i523, hid 218, Big Data, Education}
 
 
 \maketitle
@@ -57,59 +35,44 @@ ACM SIG Proceedings.
 
 \section{Introduction}
 
-Put here an introduction about your topic. 
-We just need one sample refernce so the paper compiles in LaTeX so we
-put it here \cite{editor00}.
+The development of instructional or teaching methods is closely associated with the development of educational psychology. One of the most important theory of learning is behaviorism. ``Behaviorism equates learning with changes in either the form or frequency of observable performance. Learning is accomplished when a proper response is demonstrated following the presentation of a specific environmental stimulus''\cite{PeggyA.Ertmer1993}.  Behaviorists tie stimulus with behaviors. For example, when a teacher gives a student a reward, no matter it is verbal or something real, the students will study harder. In this scenario, the reward is the stimuli and studying harder is the behavior which can be observed. However, behaviorists ignore the process of learning.
+Cognitive theory puts more focus on how people learn. Cognitivists propose that human have sensory stores which is very limited in accepting information, and short-term memory which is reached by information after it passes sensory stores and long-term memory in which information is stored permanently so learners can retrieve it when they need it. And knowledge is categorized by  procedural knowledge and  declarative knowledge \cite{KennethH.Silber2006}. Instructional design, according to cognitivists, need to be made to facilitate information process and be in line with different types of knowledge.
+In addition, constructivism made one more step forward towards learning.  Learning, according to constructivist theory, is a process of meaning making, a process of solving problems when encountering cognitive conflict and a social activity such as collaboration and negotiation \cite{Wilson2012}.
 
-\section{figures}
+\section{A new age?}
 
-In Figure \ref{f:fly} we show a fly. Please note that because we use
-just columwidth that the size of the figure will change to the
-columnwidth of the paper once we change the layout to final. CHnaging
-the layout to final should not be done by you. All figures will be
-listed at the end.
+The development of education mentioned above can serve as general guidelines for educators to manage classes. However, it is not individualized. “We are adopting what could be important and impactful practices, but we really don’t know, because we don’t have data to inform, instrument, tune, test, and measure the impact student-level impact of our seemingly endless stream of initiatives” \cite{Milliron2016}. How will big data transform education?
 
-\begin{figure}[!ht]
-  \centering\includegraphics[width=\columnwidth]{images/fly.pdf}
-  \caption{Example caption}\label{f:fly}
-\end{figure}
+\section{Education is more adaptive}
 
-When copying the example, please do not check in the images from the
-examples into your images directory as you will not need them for your
-paper. Instead use images that you like to include. If you do not have
-any images, do not dreate the images folder.
+Students with different abilities can learning at different paces. But in a traditional classroom where students learning the same lessons by listening lectures, it is impossible to implement adaptive learning.  But this will be a reality now. Institutions have access to data from various sources such as online application, classroom activity software for exercises and testing, social media, blogs and survey of staff. With the help of adaptive learning platforms, Universities can provide personalized feedback to students, monitor student satisfaction, increase attainment and give students’ opportunities to reflect on their own learning.  Adaptive learning platforms collect and interpret data from learner interaction. And teachers will be provided with real-time reports so they can have revise their teaching strategies to ensure better outcome. In such way, educators will eliminate subjective perceptions of learners' experience and find trends in learning and teaching experience \cite{Learning2016}.
 
-\section{Tables}
+\section{Big data and MOOCs}
 
-In case you need to create tables, you can do this with online tools
-(if you do not mind sharing your data) such as
-\url{https://www.tablesgenerator.com/} or other such tools (please
-google for them). They even allow you to manage tables as CSV.
+MOOCs stands for Massive Online Online Courses. It has become one of the most popular mode of informal learning and is considered ``as an opportunity to gain access to education and professional development and to develop new skill'' \cite{Dillahunt2014}. There are some very popular MOOCs sites one can find on the internet such as Coursera, Edx and Udemy. The online courses in these sites always have short instructional videos whose length varies from 5 to 20 minutes, and some quizzes embedded in these videos and discussion forums which may contain 2000 students.
+Because data in MOOCs includes longitudinal data, rich social interactions such as videoconference and detailed data about other activities, educators know have the opportunities to improve student learning in the following areas: individualized students’ learning path; diagnosis of students’ needs; reducing students’ and institution’s cost; problem-solving skills in complex context \cite{Dede2016}. On online learning, students will generate their data trail which will be analyzed in real time so an optimal learning environment will be created. Also educators can monitor students’ online activities such as how long they stay in a specific page and with such information we may know which part needs more elaboration and provide in-time support to students \cite{Rijmenam2016}. In addition, learning analysts can collect data about when  where online learners drop a certain course to see if there is a general trend to decide what parts of the course need to be improved based on a better needs analysis.
 
-or generate them by hand while using the provided template in Table\ref{t:mytable}. Not ethat
-the caption is before the tabular environment.
+\section{Computerized learning}
+Data mining and data analytic software enable educators to get immediate feedback on how well the learners were doing online. Underlying patterns can be analyzed to foretell student outcome such as dropping out, needing extra help or being able to do more demanding assignment. For example, a data analytic software was employed in a high school chemistry class which aimed at helping students understand the relation between submicroscopic particles and macroscopic phenomena. With the assistance of the software, teachers are able to know how students master chemistry, statistics, experimental designs, and key mathematical principles through assessment tools and pre- and post-test evaluation \cite{West2012}.
 
-\begin{table}[htb]
-\centering
-\caption{My caption}
-\label{t:mytabble}
-\begin{tabular}{lll}
-1 & 2 & 3 \\
-\hline
-4 & 5 & 6 \\
-7 & 8 & 9
-\end{tabular}
-\end{table}
 
-\section{Long example}
+\section{Advancing Education}
+People are used to be put in a certain grade according to their age. For example, in China children are typically start their first year in primary school at the age of  7. Students advance to a higher grade when they grow older. The result is that all the friends around are basically born in the same year. However, with the help of big data and data analysts, educators can find which student is learning faster and is ready to advance to a more difficult class and who need more support before he or she in a certain topic \cite{Kerns2013}.
+As a result, we can imagine a school where students of different ages study together in K -12 education and in undergraduate level classes. 
 
-If you like to see a more elaborate example, please look at
-report-long.tex. 
+However, such changes may have some unpredictable results. The positive result can be better school performance with exchanges of ideas from different groups and better learning effectiveness. However, some negative effects can also be predicted. Once fast learners are put together and slower learners are left in other classes, those slower learners may lose opportunity to learn from people who perform better in some subjects than them. And learning is not just to increase the input of knowledge, it also involves socializing. It is still unclear when people at different ages mix together in k-12 education whether the interaction between students will become better. Let’s take China as an example. In China, the best resources are located in the eastern coast where the economy is more developed than the west. If students are categorized by their learning data, the gap of education is definitely going to be widening instead of being reduced. So the data is just helping us to make decisions and it is up to policy makers to make sure that what is better for education.
+
+\section{Self-management}
+Because of better availability of information driven by the use of mobile devices, learners today can constantly engage in informal learning. They can learn in MOOCs, read papers that they are interested, watch some tutorial videos in various websites. As a result, it is impossible for teachers or other staff at schools to monitor learners' learning process. Recommender systems will send learners courses that they may be interested at and videos that they may want to watch, which increase learning activities. So it is very necessary that some learning analysis software can help learners to review their own learning activities and even their peers learning activities in courses they take together. In this way, learners can diagnose their own learning and learn from others.
+
+In the future, everyone will engage in mobile learning and in-time learning. People will not only learn to get certificates and get a job, but learn to solve problems popped up in their life. Moreover, they will be able to share their learning experience to others when others encounter similar problems. Therefore, a net of sharing and learning will be created to replace the school-centered knowledge world.
+
+\section{Meet learner's needs}
+For instructional designers or learning specialists, it is very important to do a thorough needs analysis before developing any instruction. However, in reality, especially in corporate learning, it is almost impossible to use survey and interviews to collect information for needs analysis. Can big data help in terms of finding employees' needs in learning something new to tackle problems at work by data mining and other means? Can big data also help us to better understand students in formal learning? We still need time to see.
 
 \section{Conclusion}
 
-Put here an conclusion. Conlcusions and abstracts must not have any
-citations in the section.
+Big data provide many new opportunities to improving learning in terms of extending traditional learning theories and in terms of revolutionizing education. With the help of big data, it will be easier to implement constructivist theory in learning, and help analyze learning in ways which cannot be done in the past. However, we should also note that with opportunities comes some potential threats such as widening the disparities between the well-learned and the ill-learned.
 
 
 \begin{acks}
@@ -122,21 +85,7 @@ citations in the section.
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{report} 
 
-\appendix
 
-We include an appendix with common issues that we see when students
-submit papers. One particular important issue is not to use the
-underscore in bibtex labels. Sharelatex allows this, but the
-proceedings script we have does not allow this.
-
-When you submit the paper you need to address each of the items in the
-issues.tex file and verify that you have done them. Please do this
-only at the end once you have finished writing the paper. To d this
-cange TODO with DONE. However if you check something on with DONE, but
-we find you actually have not executed it correcty, you will receive
-point deductions. Thus it is important to do this correctly and not
-just 5 minutes before the deadline. It is better to do a late
-submission than doing the check in haste. 
 
 \input{issues}
 
