--- a/paper2/report.bib
+++ b/paper2/report.bib
@@ -1,15 +1,89 @@
 
 
-@Article{abril07,
-  author 	= "Patricia S. Abril and Robert Plant",
-  title 	= "The patent holder's dilemma: Buy, sell, or troll?",
-  journal 	= "Communications of the ACM",
-  volume 	= "50",
-  number 	= "1",
-  month 	= jan,
-  year 		= "2007",
-  pages 	= "36--44",
-  doi 		= "10.1145/1188913.1188915",
-  url		= "http://doi.acm.org/10.1145/1219092.1219093",
-  note		= "",
+% Encoding: UTF-8
+
+@Article{Milliron2016,
+  author = {Mark D. Milliron},
+  title  = {Higher Education's Turn To Big Data For 'Healthy' Change},
+  year   = {2016},
+  url    = {https://www.forbes.com/sites/schoolboard/2016/09/16/higher-educations-turn-to-big-data-for-healthy-change/#201f70a81bcc},
 }
+
+@InBook{Wilson2012,
+  chapter   = {5},
+  pages     = {45},
+  title     = {Constructivism in practice and historical context},
+  publisher = {Pearson},
+  year      = {2012},
+  author    = {Brent G. Wilson},
+}
+
+@Article{PeggyA.Ertmer1993,
+  author  = {Peggy A. Ertmer, Timothy J, Newby},
+  title   = {Behaviorism, cognitivism, constructivisim: comparing critical features from an instructional design perspective},
+  journal = {Performance improvement quarterly},
+  year    = {1993},
+  volume  = {6},
+  number  = {50-72},
+  pages   = {50},
+}
+
+@InBook{KennethH.Silber2006,
+  chapter   = {16},
+  pages     = {370-413},
+  title     = {Handbook of human performance technology: rpiciples, practices, and potential},
+  publisher = {Wiley},
+  year      = {2006},
+  author    = {Kenneth H. Silber, WELLESLEY R. Foshay},
+  editor    = {James A. Pershing},
+}
+
+@Article{Learning2016,
+  author = {How Big Data Will Boost Learning and Teaching in Higher Education},
+  title  = {Cogbooks},
+  year   = {2016},
+  url    = {https://www.cogbooks.com/2016/10/05/big-data-will-boost-learning-teaching-higher-education/},
+}
+
+@Article{Dillahunt2014,
+  author  = {Tawanna Dillahunt, Zengguang Wang, Stephanie D. Teasley},
+  title   = {Democratizing higher education: Exploring MOOC use among those who cannot afford a formal education},
+  journal = {International Review of Research in Open and Distance Learning},
+  year    = {2014},
+  volume  = {15},
+  number  = {5},
+  pages   = {20},
+}
+
+@Article{Dede2016,
+  author  = {Chris Dede and Andrew Ho},
+  title   = {Big Data Analysis in Higher Education: Promises and Pitfalls},
+  journal = {Educause Review},
+  year    = {2016},
+  volume  = {51},
+  number  = {5},
+  url     = {https://er.educause.edu/articles/2016/8/big-data-analysis-in-higher-education-promises-and-pitfalls},
+}
+
+@Article{Rijmenam2016,
+  author = {Mark van Rijmenam},
+  title  = {Four Ways Big Data Will Revolutionize Education},
+  year   = {2016},
+  url    = {https://datafloq.com/read/big-data-will-revolutionize-learning/206},
+}
+
+@Article{West2012,
+  author = {Darrell M. West},
+  title  = {Big Data for Education: Data Mining, Data Analytics, and Web Dashboards},
+  year   = {2012},
+  pages  = {2},
+}
+
+@Article{Kerns2013,
+  author = {Dan Kerns},
+  title  = {10 Ways Big Data is Changing K-12 Education},
+  year   = {2013},
+  url    = {http://www.dreambox.com/blog/10-ways-big-data-changing-k-12-education-2},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
