--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -66,4 +66,4 @@ With the spread of mobile phones and laptops and affordable high-speed internet,
 \bibliography{report} 
 
 
-\input{bibtex-error}\input{issues}\end{document}
+\end{document}
